--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -14,6 +14,21 @@
     <script defer src="/__/firebase/5.7.2/firebase-storage.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
+
+
+<script src="https://www.gstatic.com/firebasejs/5.7.2/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBHfnb6zGZXaDMmKmAYFpLZbBWaItYc_Kc",
+    authDomain: "taurusiom.firebaseapp.com",
+    databaseURL: "https://taurusiom.firebaseio.com",
+    projectId: "taurusiom",
+    storageBucket: "taurusiom.appspot.com",
+    messagingSenderId: "4837114276"
+  };
+  firebase.initializeApp(config);
+</script>    
 
     <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
